--- a/mobile.css
+++ b/mobile.css
@@ -1,7 +1,8 @@
 .popup{
+    width: 100%;
+    height: 100%;
     margin-left: auto;
     margin-right: auto;
-    width: 600px;
 }
 .disabled {
     width: 0px;
@@ -15,17 +16,18 @@
     cursor: pointer;
     background: #000000;
     border-radius: 2px;
-    width: 358px;
-    height: 50px;
+    width: 80%;
+    height: 100px;
     font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
+    font-size: 50px;
     line-height: 22px;
     text-align: center;
 
     display: block;
     position: relative;
+
 left: 50%;
 transform: translate(-50%, 0);
 
@@ -55,8 +57,8 @@ transform: translate(-50%, 0);
     font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
-    line-height: 22px;
+    font-size: 50px;
+    line-height: 40px;
     text-align: center;
 }
 
@@ -65,13 +67,13 @@ transform: translate(-50%, 0);
     cursor: pointer;
     background: #542fd8;
     border-radius: 2px;
-    width: 358px;
-    height: 50px;
+    width: 80%;
+    height: 100px;
     font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: normal;
     margin-top: 10px;
-    font-size: 18px;
+    font-size: 50px;
     line-height: 22px;
     text-align: center;
     margin-right: auto;
@@ -93,3 +95,29 @@ transform: translate(-50%, 0);
             -webkit-user-select: none; 
 }
 
+.ver{
+    color: green;
+    font-size: 80px;
+    line-height: 22px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.never{
+    color: red;
+    font-size: 80px;
+    line-height: 22px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.prav{
+    font-family: "Inter", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 50px;
+    line-height: 40px;
+    text-align: center; 
+}
