--- a/mobile.css
+++ b/mobile.css
@@ -68,7 +68,7 @@ transform: translate(-50%, 0);
     background: #542fd8;
     border-radius: 2px;
     width: 80%;
-    height: 100px;
+    min-height: 100px;
     font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: normal;
