--- a/mobile.css
+++ b/mobile.css
@@ -121,3 +121,10 @@ transform: translate(-50%, 0);
     line-height: 40px;
     text-align: center; 
 }
+
+.green{
+    background: green;
+}
+.red{
+    background:red;
+}
