--- a/mobile.css
+++ b/mobile.css
@@ -137,3 +137,10 @@ transform: translate(-50%, 0);
     line-height: 40px;
     text-align: center; 
 }
+
+
+.neprav{
+    margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+}
