--- a/style.css
+++ b/style.css
@@ -1,173 +1,268 @@
 .popup {
-  margin-left: auto;
-  margin-right: auto;
-  width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+  .disabled {
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+    visibility: hidden;
+    display: block;
+  }
+  
+  .start {
+    cursor: pointer;
+    background: #000000;
+    border-radius: 2px;
+    width: 358px;
+    height: 50px;
+    font-family: "Inter", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+  
+    display: block;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0);
+  
+    outline: none;
+    border: none;
+    color: #ffffff;
+    -ms-user-select: none;
+    -moz-user-select: none;
+  
+    /**
+               * Для конкверора
+               */
+    -khtml-user-select: none;
+  
+    /**
+               * Для Сафари и Хрома
+               */
+    -webkit-user-select: none;
+  }
+  
+  .start:hover {
+    opacity: 0.8;
+  }
+  
+  .text {
+    font-family: "Inter", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+  }
+  
+  .btn {
+    display: block;
+    cursor: pointer;
+    background: #542fd8;
+    border-radius: 2px;
+    width: 358px;
+  
+    font-family: "Inter", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    margin-top: 10px;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    outline: none;
+    border: none;
+    color: #ffffff;
+    -ms-user-select: none;
+    -moz-user-select: none;
+  
+    /**
+               * Для конкверора
+               */
+    -khtml-user-select: none;
+  
+    /**
+               * Для Сафари и Хрома
+               */
+    -webkit-user-select: none;
+  }
+  
+  .green {
+    background: green;
+  }
+  .red {
+    background: red;
+  }
+  .orange {
+    background: orange;
+  }
+  .postgreen {
+    background: rgb(2, 105, 2);
+  }
+  .skoko {
+    font-family: "Inter", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+  }
+  
+  .ver {
+    color: green;
+    font-size: 40px;
+    line-height: 22px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
+  .never {
+    color: red;
+    font-size: 40px;
+    line-height: 22px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
+  .prav {
+    font-family: "Inter", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 40px;
+    text-align: center;
+  }
+  
+  .neprav {
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .vas {
+    font-size: 60px;
+    line-height: 40px;
+    text-align: center;
+  }
+  
+  .ocenka {
+    font-size: 110px;
+    line-height: 40px;
+    text-align: center;
+  }
+  
+  
+  .greenl {
+    color: green;
+  }
+  .redl {
+    color: red;
+  }
+  .orangel {
+    color: orange;
+  }
+  .postgreenl {
+    color: rgb(2, 105, 2);
+  }
+
+  body, html
+{
+   width: 100%;
+   height: 100%;
+   margin: 0;
+   padding: 0;
+   overflow: hidden;
+   font-size: 16px;
+   font-family: helvetica, arial;
+   background: #f9f9f9;
+   color: #111;
 }
-.disabled {
-  width: 0px;
-  height: 0px;
-  opacity: 0;
-  visibility: hidden;
+ 
+.wrapper
+{
+   width: 100%;
+   height: 100%;
+   display: table;
+}
+ 
+.main
+{
+   display: table-cell;
+   vertical-align: middle;
+   text-align: center;
+}
+ 
+.quiz-frame
+{
   display: block;
-}
-
-.start {
-  cursor: pointer;
-  background: #000000;
-  border-radius: 2px;
-  width: 358px;
-  height: 50px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-
-  display: block;
-  position: relative;
-  left: 50%;
-  transform: translate(-50%, 0);
-
-  outline: none;
-  border: none;
-  color: #ffffff;
-  -ms-user-select: none;
-  -moz-user-select: none;
-
-  /**
-             * Для конкверора
-             */
-  -khtml-user-select: none;
-
-  /**
-             * Для Сафари и Хрома
-             */
-  -webkit-user-select: none;
-}
-
-.start:hover {
-  opacity: 0.8;
-}
-
-.text {
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-}
-
-.btn {
-  display: block;
-  cursor: pointer;
-  background: #542fd8;
-  border-radius: 2px;
-  width: 358px;
-
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  margin-top: 10px;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-  margin-right: auto;
-  margin-left: auto;
-  outline: none;
-  border: none;
-  color: #ffffff;
-  -ms-user-select: none;
-  -moz-user-select: none;
-
-  /**
-             * Для конкверора
-             */
-  -khtml-user-select: none;
-
-  /**
-             * Для Сафари и Хрома
-             */
-  -webkit-user-select: none;
-}
-
-.green {
-  background: green;
-}
-.red {
-  background: red;
-}
-.orange {
-  background: orange;
-}
-.postgreen {
-  background: rgb(2, 105, 2);
-}
-.skoko {
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-}
-
-.ver {
-  color: green;
-  font-size: 40px;
-  line-height: 22px;
-  text-align: center;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.never {
-  color: red;
-  font-size: 40px;
-  line-height: 22px;
-  text-align: center;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.prav {
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 40px;
-  line-height: 40px;
-  text-align: center;
-}
-
-.neprav {
-  margin-top: 40px;
   margin-left: auto;
   margin-right: auto;
+   border: 0;
+   box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
-
-.vas {
-  font-size: 60px;
-  line-height: 40px;
-  text-align: center;
+ 
+.quiz__head
+{
+   font-size: 20pt;
+   margin: 10px;
+   margin-bottom: 50px;
 }
-
-.ocenka {
-  font-size: 110px;
-  line-height: 40px;
-  text-align: center;
+ 
+.head__content
+{
+   padding: 5px;
 }
-
-
-.greenl {
-  color: green;
+ 
+.quiz__body
+{
+   margin: 10px;
 }
-.redl {
-  color: red;
+ 
+.quiz__footer
+{
+   position: absolute;
+   bottom: 0;
+   display: block;
+   width: 100%;
 }
-.orangel {
-  color: orange;
+ 
+.footer__content
+{
+   padding: 5px;
 }
-.postgreenl {
-  color: rgb(2, 105, 2);
+ 
+.button
+{
+   border: 0;
+   border-radius: 10px;
+   background: #6477EB;
+   color: #fff;
+   padding: 10px 25px;
+   width: 70%;
+   font-size: 15pt;
+   display: block;
+   margin: 2px auto;
+   cursor: pointer;
+}
+ 
+.button_wrong
+{
+   background: #EB6465;
+}
+ 
+.button_correct
+{
+   background: #5EB97D;
+}
+ 
+.button_passive
+{
+   background: #B3B3B3;
 }
