--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 .popup {
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
+    width: 600px;
   }
   .disabled {
     width: 0px;
     height: 0px;
     opacity: 0;
     visibility: hidden;
-    display: block;
+    display: none;
   }
   
   .start {
@@ -24,7 +24,7 @@
     line-height: 22px;
     text-align: center;
   
-    display: block;
+
     position: relative;
     left: 50%;
     transform: translate(-50%, 0);
@@ -201,9 +201,6 @@
  
 .quiz-frame
 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
    border: 0;
    box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
