--- a/mobile.css
+++ b/mobile.css
@@ -4,15 +4,14 @@
     margin-left: auto;
     margin-right: auto;
 }
-.disabled {
-    width: 0px;
-    height: 0px;
-    opacity: 0;
-    visibility: hidden;
-    display: none;
- }
+
 
 .start{
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     cursor: pointer;
     background: #000000;
     border-radius: 2px;
@@ -25,10 +24,7 @@
     line-height: 22px;
     text-align: center;
 
-    position: relative;
 
-left: 50%;
-transform: translate(-50%, 0);
 
     outline: none;
     border: none;
@@ -269,3 +265,11 @@ transform: translate(-50%, 0);
 {
    background: #B3B3B3;
 }
+
+.disabled {
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+    visibility: hidden;
+    display: none;
+ }
