--- a/style.css
+++ b/style.css
@@ -3,15 +3,14 @@
     margin-right: auto;
     width: 600px;
   }
-  .disabled {
-    width: 0px;
-    height: 0px;
-    opacity: 0;
-    visibility: hidden;
-    display: none;
-  }
+
   
   .start {
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     cursor: pointer;
     background: #000000;
     border-radius: 2px;
@@ -23,27 +22,24 @@
     font-size: 18px;
     line-height: 22px;
     text-align: center;
-  
 
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
-  
+
+
     outline: none;
     border: none;
-    color: #ffffff;
+    color: #FFFFFF;
     -ms-user-select: none;
-    -moz-user-select: none;
-  
-    /**
-               * Для конкверора
-               */
-    -khtml-user-select: none;
-  
-    /**
-               * Для Сафари и Хрома
-               */
-    -webkit-user-select: none;
+            -moz-user-select: none;
+
+            /**
+             * Для конкверора
+             */
+            -khtml-user-select: none;
+
+            /**
+             * Для Сафари и Хрома
+             */
+            -webkit-user-select: none;
   }
   
   .start:hover {
@@ -262,4 +258,12 @@
 .button_passive
 {
    background: #B3B3B3;
+}
+
+.disabled {
+  width: 0px;
+  height: 0px;
+  opacity: 0;
+  visibility: hidden;
+  display: none;
 }
