--- a/mobile.css
+++ b/mobile.css
@@ -1,3 +1,19 @@
+body {
+    -ms-user-select: none;
+    -moz-user-select: none;
+  
+    /**
+     * Для конкверора
+     */
+    -khtml-user-select: none;
+  
+    /**
+     * Для Сафари и Хрома
+     */
+    -webkit-user-select: none;
+  }
+  
+
 .popup{
     width: 100%;
     height: 100%;
