--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+body {
+  -ms-user-select: none;
+  -moz-user-select: none;
+
+  /**
+   * Для конкверора
+   */
+  -khtml-user-select: none;
+
+  /**
+   * Для Сафари и Хрома
+   */
+  -webkit-user-select: none;
+}
+
 .popup {
     margin-left: auto;
     margin-right: auto;
